--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'me.abhinay.input:currency-edittext:1.1'
     implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     implementation 'org.sufficientlysecure:html-textview:3.6'
+    implementation 'com.github.Yalantis:SearchFilter:v1.0.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
