--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     implementation 'org.sufficientlysecure:html-textview:3.6'
     implementation 'com.github.Yalantis:SearchFilter:v1.0.4'
+    implementation 'com.github.florent37:expansionpanel:1.1.1'
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
