--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.github.Yalantis:SearchFilter:v1.0.4'
     implementation 'com.github.florent37:expansionpanel:1.1.1'
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
