--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'org.sufficientlysecure:html-textview:3.6'
+    implementation 'com.daimajia.androidanimations:library:1.0.3@aar'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
