Modify talent/model profile page. Added set booking details & checkout activity. Integrate 3rd party library called 'Android Card Form' that will make it easier to add credit & debit card form in your app. Modify unavailable dates dialog & filtering page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,25 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".activities.CheckoutActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_checkout"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.SetBookingDateAndTimeActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_booking_date_and_time"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.BookingListActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_booking_list"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.SettingsActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_settings"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.FilteringActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
