--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
     implementation 'me.abhinay.input:currency-edittext:1.1'
+    implementation 'com.github.michaldrabik:tapbarmenu:1.0.5'
+    implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
