--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -25,16 +25,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.jakewharton:butterknife:8.5.1'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
 
@@ -43,14 +42,13 @@ dependencies {
         exclude group: 'com.rengwuxian.materialedittext', module: 'library'
     }
 
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'cz.kinst.jakub:android-stateful-layout-simple:2.0.7'
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
     implementation 'com.ethanhua:skeleton:1.1.1'
     implementation 'io.supercharge:shimmerlayout:2.1.0'
     implementation 'com.github.nikartm:process-button:1.0.1'
-    implementation 'com.cocosw:bottomsheet:1.3.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'me.abhinay.input:currency-edittext:1.1'
     implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
@@ -70,10 +68,12 @@ dependencies {
     implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
     implementation 'me.abhinay.input:currency-edittext:1.1'
-    implementation 'com.github.michaldrabik:tapbarmenu:1.0.5'
+    implementation 'com.github.michaldrabik:tapbarmenu:1.0.6'
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation 'com.stripe:stripe-android:12.0.1'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
