--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'com.github.michaldrabik:tapbarmenu:1.0.6'
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.stripe:stripe-android:12.0.1'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     testImplementation 'junit:junit:4.12'
