--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation 'com.stripe:stripe-android:12.0.1'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
     implementation 'com.github.mejdi14:Flat-Dialog-Android:1.0.4'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     testImplementation 'junit:junit:4.12'
