set minifyEnabled = true & added shrinkResources = true on build.gradle. Redesign splash screen & login page.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,9 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            //minifyEnabled false //use for development
+            minifyEnabled true //use for production
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
