Added functionality for About (App & Developer) side drawer menu navigation. Replaced static talent profile picture into dynamic one. Fixed empty talent name in home & profile page. Fixed grid layout by 2s not working properly on some devices. Regenerate APK v1.1.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         release {
             //minifyEnabled false //use for development
             minifyEnabled true //use for production
-            shrinkResources true
+            shrinkResources true //use for production
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
