--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,15 @@ android {
         applicationId "com.trosales.hireusapp"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.1"
+        versionCode 2
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false //use for development
-            //minifyEnabled true //use for production
-            //shrinkResources true //use for production
+            //minifyEnabled false //use for development
+            minifyEnabled true //use for production
+            shrinkResources true //use for production
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -75,6 +75,7 @@ dependencies {
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
     implementation 'com.github.mejdi14:Flat-Dialog-Android:1.0.4'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
