--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,7 @@ dependencies {
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.stripe:stripe-android:12.0.1'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
-    implementation 'com.github.mejdi14:Flat-Dialog-Android:1.0.4'
-    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation 'com.github.thomper:sweet-alert-dialog:1.4.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
