--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
     buildToolsVersion = '28.0.3'
 }
 
+repositories{
+    mavenCentral()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -35,7 +39,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
 
@@ -73,7 +76,7 @@ dependencies {
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.stripe:stripe-android:12.0.1'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
-    implementation 'com.github.thomper:sweet-alert-dialog:1.4.0'
+    implementation 'com.github.AbhisheKundalia:sweet-alert-dialog:v2.0.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
