--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,16 +67,14 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
-    implementation 'com.borax12.materialdaterangepicker:library:2.0'
     implementation 'com.github.arcadefire:nice-spinner:1.4.3'
-    implementation 'com.github.Binary-Finery:EZDialog:1.0.4'
-    implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     implementation 'me.abhinay.input:currency-edittext:1.1'
     implementation 'com.github.michaldrabik:tapbarmenu:1.0.6'
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.stripe:stripe-android:12.0.1'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
     implementation 'com.github.AbhisheKundalia:sweet-alert-dialog:v2.0.0'
+    implementation 'com.squareup:android-times-square:1.5.0@aar'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
