--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:label="@string/title_activity_booking_list"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.ClientsActivity"
+            android:name=".activities.PotentialClientsActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_clients_booked"
             android:screenOrientation="portrait" />
