--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.palette:palette:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
 
