--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
     implementation 'com.github.AbhisheKundalia:sweet-alert-dialog:v2.0.0'
     implementation 'com.squareup:android-times-square:1.5.0@aar'
+    implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
